Fix Theme 1 jump link position

--- a/css/templates/themes/1/page.css
+++ b/css/templates/themes/1/page.css
@@ -51,6 +51,11 @@ h4,
   line-height: var(--line-height-2);
 }
 
+#content {
+  padding-top: var(--space-6);
+  margin-top: calc(0px - var(--space-6));
+}
+
 .ampstart-headerbar {
   background: var(--color-primary);
   color: var(--color-font-primary);
@@ -104,6 +109,10 @@ h4,
 .ampstart-fullpage-hero-heading {
   font-size: var(--h2);
   line-height: 1.6;
+  margin-bottom: 0;
+}
+
+.ampstart-image-fullpage-hero {
   margin-bottom: 0;
 }
 
